# ezneis

./: .gitignore  LICENSE  README-ko.md  README.md  build.sh  pyproject.toml  requirements.txt
ezneis/: __init__.py  exception.py  exceptions.py  region.py  util.py
ezneis/api/: core.py  wrapper.py
ezneis/data/: __init__.py
ezneis/data/school/: __init__.py  asynchronous.py  common.py  synchronous.py
ezneis/http/: __init__.py  asynchronous.py  common.py  service.py  synchronous.py
ezneis/models/: __init__.py  classroom.py  common.py  core.py  department.py  lecture_room.py  major.py  meal.py  schedule.py  school_info.py  time_table.py
ezneis/parser/: core.py
ezneis/parser/school/: classroom.py  info.py  meal.py  schedule.py
ezneis/parsers/: __init__.py  classroom.py  common.py  department.py  lecture_room.py  major.py  meal.py  schedule.py  school_info.py  time_table.py
ezneis/types/school/: classroom.py  info.py  meal.py  schedule.py
ezneis/utils/: async_property.py  caches.py  region.py  session_manager.py  ttl_cache.py
ezneis/wrappers/: asynchronous.py  synchronous.py
tests/: __init__.py  conftest.py
tests/wrappers/: conftest.py  test_asynchronous.py  test_synchronous.py
