[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezneis"
version = "0.2.0"
description = "ezneis: 나이스 API 파싱 라이브러리"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "DuelitDev", email = "jyoon07dev@gmail.com" }
]
license = { text = "MIT License" }
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "requests>=2.27.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
]
style = [
    "black>=25.1.0",
]
typing = [
    "pyright>=1.1.391",
]
